Bug fixes in 1.17.1:
 * Fix Print dialog
 * Fix command-line "Print" command
 * Fix duplicate axes drawn in grid
 * Fix crash adding empty polar plot

Changes in 1.17:
 * Add new broken axis widget with gaps in the numerical sequence
 * Grid lines are plotted always under (or over) the data
 * Shift+Scroll wheel scrolls left/right (thanks to Dave Hughes)
 * Polar plots can have a "minimum" radius and log axes
 * Many more LaTeX symbols added
 * Add SAMP/VoTable support (thanks to Graham Bell)
 * New shifted-points xy line mode, which plots a stepped line with
   the points shifted to lie between the coordinates given
 * Points can be picked to console and/or clipboard
   (thanks to Valerio Mussi)
 * Allow reversed ternary plot

Bug fixes:
 * Fix unicode characters for \circ and \odot
 * Fix for data type of pickable points
 * Fix sort by group crash bug
 * Many crashes fixed
 * Fix width of key when using long titles/and or multiple columns
 * Fix bold and italic output in SVG output

Changes in 1.16:
 * Experimental MathML support
 * Add upper/lower-left/right arrows
 * Add options to clip text/lines/shapes to graphs
 * Add stacked-area option to bar plot widget
 * Draw stacked bar plots top-down for better overlapping line behaviour
 * Axis labels can be placed at left or right of axes, in addition to centre
 * Line widget now has length-angle or point-to-point modes. Better support
   for only specifying some coordinates.
 * Exception dialog records more detailed traceback
 * Use top level windows for non-modal dialogs, giving minimize in window
   and no always-on-top behaviour
 * Zero length vectors and arrows in vector fields are not plotted
 * Add support for strings to be translated
 * Add "Sort" dataset plugin
 * Add "Histogram 2D" dataset plugin
 * Add "Divide by Maximum" and "Normalize" dataset plugins
 * Support for *args and **kwargs for custom functions
 * Custom colormaps can be defined in the custom editing dialog

Bug fixes: